[package]
name = "tomato-clock"
version = "0.1.0"
edition = "2021"
description = "The Tomato Clock program  running in the terminal."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
clap = { version = "4.5.4", features = ["derive"] }
ctrlc = "3.4.4"
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.37.0", features = ["time", "rt","macros", "rt-multi-thread"] }
